# embedded-interface-demo

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
client/: gulpfile.js  package-lock.json  package.json  tailwind.config.js
client/src/: index.html
client/src/css/: main.css
client/src/css/component/: header.css  toggle.css
client/src/js/: index.js
client/src/js/components/: Header.js  Toggle.js  index.js
client/src/js/models/: ChipInfo.js  index.js
client/src/js/views/: About.js  App.js  NotFound.js  index.js
server/: .gitignore  Cargo.toml
server/.cargo/: config.toml
server/resources/: partitions.csv
server/src/: chip_info.rs  main.rs  rgb_led.rs
xtask/: Cargo.toml
xtask/src/: main.rs
