[package]
name     = "server"
version  = "0.0.0"
authors  = ["Jesse Braham <jesse@beta7.io>"]
edition  = "2018"
resolver = "2"
publish  = false

[package.metadata.espflash]
bootloader      = "resources/bootloader.bin"
partition_table = "resources/partitions.csv"

[dependencies]
anyhow       = "1.0"
embedded-svc = "0.15"
esp-idf-hal  = "0.29"
esp-idf-svc  = "0.34"
esp-idf-sys  = { version = "0.28", features = ["binstart"] }
log          = "0.4"

[build-dependencies]
anyhow  = "1.0"
embuild = "0.27"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[profile.dev]
debug     = true
opt-level = "z"

[profile.release]
lto       = true
opt-level = "s"
