[package]
name     = "server"
version  = "0.0.0"
authors  = ["Jesse Braham <jesse@beta7.io>"]
edition  = "2021"
publish  = false

[package.metadata.espflash]
bootloader      = "resources/bootloader.bin"
partition_table = "resources/partitions.csv"

[dependencies]
anyhow      = "1.0"
esp-idf-sys = { version = "0.28", features = ["binstart"] }
json        = "0.12"
log         = "0.4"

[dependencies.esp-idf-hal]
git      = "https://github.com/jessebraham/esp-idf-hal"
branch   = "feature/chip-info"

[dependencies.embedded-svc]
git      = "https://github.com/jessebraham/embedded-svc"
branch   = "feature/content-encoding"
features = ["experimental"]

[dependencies.esp-idf-svc]
git      = "https://github.com/jessebraham/esp-idf-svc"
branch   = "feature/content-encoding"
features = ["experimental"]

[build-dependencies]
anyhow  = "1.0"
embuild = "0.27"

[features]
default = ["native"]
native  = ["esp-idf-sys/native"]
