[package]
name     = "server"
version  = "0.0.0"
authors  = ["Jesse Braham <jesse@beta7.io>"]
edition  = "2021"
publish  = false

[package.metadata.espflash]
bootloader      = "resources/bootloader.bin"
partition_table = "resources/partitions.csv"

[dependencies]
anyhow       = "1.0"
embedded-svc = { version = "0.16", features = ["experimental"] }
esp-idf-hal  = { path = "../../esp-idf-hal" }
esp-idf-svc  = { version = "0.36", features = ["experimental"] }
esp-idf-sys  = { version = "0.29", features = ["binstart"] }
log          = "0.4"
serde        = { version = "1.0", features = ["derive"] }
strum_macros = "0.23"

[build-dependencies]
anyhow  = "1.0"
embuild = "0.28"

[features]
default = ["native"]
native  = ["esp-idf-sys/native"]
